fixed the bug in explore page and add jump-buttom

--- a/frontend/src/components/ExploreTemp/ExploreTemp.css
+++ b/frontend/src/components/ExploreTemp/ExploreTemp.css
@@ -8,7 +8,7 @@
     color: rgba(0.6, 0.6, 0.6, 0.5);
 }
 
-.post-created-time {
+.post-created-time-explore {
     font-size: 12px;
     padding-left: 0px;
     color: rgba(0.6, 0.6, 0.6, 0.5);
